--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -1,16 +1,14 @@
 @import "~bootstrap/scss/bootstrap.scss";
 
-/* 
-    body{
-        background: #BDBDBD;
-    }
-    
-    You can write your own styles here...
-    
-    
-    ...Or you can use the import command to include 
-    other sylesheets into your bunde as well, e.j:
-    
-    import 'relative/path/to/stylesheet.scss';
+body {
+  background: #0e7e12;
+}
 
-*/
+#carta {
+  margin: 0 auto;
+  font-size: 3rem;
+}
+
+#medio {
+  font-size: 5rem;
+}
