--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -4,11 +4,6 @@ body {
   background: #0e7e12;
 }
 
-#carta {
-  margin: 0 auto;
-  font-size: 3rem;
-}
-
-#medio {
-  font-size: 5rem;
-}
+// #carta {
+//   width: 30rem;
+// }
